# app/controllers/api/v1/posts_controller.rb
@@ -1,8 +1,10 @@
 class Api::V1::PostsController < Api::V1::ApiController
   skip_before_action :authorize!, only: :index
+  load_and_authorize_resource find_by: :id, class: :Post, except: %i[index create]
 
   def index
-    post = Post.preload(:category).order(created_at: :desc)
+    post = Post.order(created_at: :desc)
+
     render json: post, status: :ok
   end
 
@@ -15,9 +17,21 @@ class Api::V1::PostsController < Api::V1::ApiController
     end
   end
 
+  def show
+    render json: @post, status: :ok
+  end
+
+  def update
+    if @post.update(post_params)
+      render json: @post, status: :ok
+    else
+      render json: @post.errors, status: 422
+    end
+  end
+
   private
 
   def post_params
-    params.permit(:title, :body, :category_id, :user_id)
+    params.permit(:title, :body, :category_id)
   end
 end
