# swagger/v1/swagger.yaml
@@ -57,7 +57,7 @@ paths:
               - email
               - password
   "/api/v1/auth/auto-login":
-    post:
+    get:
       summary: auto login
       tags:
       - Authorization
@@ -78,8 +78,6 @@ paths:
       summary: List of posts
       tags:
       - Posts
-      security:
-      - ApiKeyAuth: []
       responses:
         '200':
           description: list of teams shown
@@ -88,6 +86,8 @@ paths:
       summary: Create post
       tags:
       - Posts
+      security:
+      - token: {}
       parameters:
       - name: Authorization
         in: header
@@ -95,7 +95,7 @@ paths:
           type: string
       responses:
         '200':
-          description: return user
+          description: return post
           content: {}
         '422':
           description: invalid request
@@ -120,3 +120,10 @@ servers:
   variables:
     defaultHost:
       default: localhost:3000
+components:
+  securitySchemes:
+    api_key:
+      type: apiKey
+      name: Authorization
+      in: header
+      require: false
